--- a/pvcfabric.yml
+++ b/pvcfabric.yml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     volume.beta.kubernetes.io/storage-class: standard
 spec:
+  storageClassName: manual
   capacity:
     storage: 20Gi
   accessModes:
