--- a/pvcfabric.yml
+++ b/pvcfabric.yml
@@ -40,3 +40,25 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: hindaw
+  namespace: fabric8
+  annotations:
+    fabric8.io/target-platform: kubernetes
+  creationTimestamp: null
+  labels:
+    group: io.fabric8.apps
+    project: docker-registry
+    provider: fabric8
+    version: 1.0.1
+  selfLink: /api/v1/namespaces/fabric8/persistentvolumeclaims/fabric8-docker-registry-storage
+spec:
+  storageClassName: manual
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
