--- a/pvcfabricfinal.yml
+++ b/pvcfabricfinal.yml
@@ -33,3 +33,57 @@ spec:
     server: 10.130.24.100
     path: /shared
   persistentVolumeReclaimPolicy: Retain
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: fabric8-3
+  namespace: fabric8
+  labels:
+    volume_name: fabric8-3
+spec:
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteMany
+    - ReadWriteOnce
+  nfs:
+    server: 10.130.24.100
+    path: /shared
+  persistentVolumeReclaimPolicy: Retain
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: fabric8-4
+  namespace: fabric8
+  labels:
+    volume_name: fabric8-4
+spec:
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteMany
+    - ReadWriteOnce
+  nfs:
+    server: 10.130.24.100
+    path: /shared
+  persistentVolumeReclaimPolicy: Retain
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: fabric8-5
+  namespace: fabric8
+  labels:
+    volume_name: fabric8-5
+spec:
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteMany
+    - ReadWriteOnce
+  nfs:
+    server: 10.130.24.100
+    path: /shared
+  persistentVolumeReclaimPolicy: Retain
